fixes flickering

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -22,6 +22,7 @@ body {
 
 .screen {
   position: relative;
+  -webkit-backface-visibility: hidden;
   width: 100%;
   height: 100%;
 }
